D - Update .gitignore to include IntelliJ default entries
Added IntelliJ-related files and directories to .gitignore for better compatibility with IntelliJ-based development environments. This ensures unnecessary files like .DS_Store and build outputs are excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# From intellij default
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
