--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/Theme.ThePinballApp"
             tools:targetApi="36">
         <activity
-                android:name=".activity.MainActivity$MainActivity"
+                android:name=".activity.MainActivity"
                 android:exported="true"
                 android:theme="@style/Theme.ThePinballApp">
             <intent-filter>
