--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.03.01"
 material3 = "1.3.1"
 hilt = "2.51.1"
+materialIconsExtended = "1.7.8"
 moshiKotlin = "1.15.2"
 ktlint = "11.1.0"
 mockk = "1.13.8"
@@ -24,6 +25,7 @@ kotlin-test = "1.9.22"  # Usually matches your Kotlin version
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCompose" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
